# LEPL1503-C_Programming

Intro C/S2/: CMakeLists.txt  main.c
Intro C/S3_C/: CMakeLists.txt  main.c
Intro C/S3_C/BinaryTree/: BinaryTree.c  BinaryTree.h
Intro C/S3_C/Simple LinkedList/: SImpleLinkedList.c  SImpleLinkedList.h
Intro C/S3_C/Structures and Pointers/: Structures and Pointers to structures.c  Structures and Pointers to structures.h
Intro C/S3_C/calloc(3) malloc(3)/: CallocMalloc.c  CallocMalloc.h
Intro C/S4/: CMakeLists.txt  main.c
Intro C/S4/Advanced Stack/: AdvancedStack.c  AdvancedStack.h
Intro C/S4/Comparing Functions/: ComparingFunctiuns.c  ComparingFunctiuns.h
Intro C/S4/Filtering Linked List/: FIlteringLL.c  FIlteringLL.h
Intro C/S4/Ordered Linked List/: OrderedLinkedList.c  OrderedLinkedList.h
Intro C/S4/Simple Stack/: Stack.c  Stack.h
Intro C/S5/: CMakeLists.txt  main.c
Intro C/S5/File Copy/: File_copy.c  File_copy.h
Intro C/S5/Get and set on array stored in binary file/: Get_Set_on_array.c  Get_Set_on_array.h
Intro C/S5/Reading int in a binary file/: Sum_file.c  Sum_file.h
Intro C/S5/Save Struct into file/: StructToFile.c  StructToFile.h
Intro C/S6/: CMakeLists.txt
Intro C/S6/Do my Work/: doMyWork.c  doMyWork.h
Intro C/S6/Protect my Variable/: Protect.c  Protect.h
Intro C/S6/Shared ressource/: SharedRessources.c  SharedRessources.h
Intro C/S6/Sort my points/: SortmyPoints.c  SortmyPoints.h
Projet3/factorial/: main.c
